// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleTagsSelector renders empty 1`] = `
<StyledArticleTagsSelector
  accentColor="#00d6d6"
  className=""
  communityName=""
  maxAllowed={10}
  onAddTag={[Function]}
  onOpenSearch={[Function]}
  onRemoveTag={[Function]}
  onSearch={[Function]}
  onSuggestedTag={[Function]}
  searchResults={null}
  suggestedTags={null}
  tags={null}
>
  <StyledArticleTagsSelector__Wrapper
    className=""
  >
    <div
      className="StyledArticleTagsSelector__Wrapper-sc-9gk8qd-0 lfkksC"
    >
      <SearchForm
        accentColor="#00d6d6"
        className=""
        communityName=""
        maxAllowed={10}
        maxNumOfTagsAdded={null}
        onAddTag={[Function]}
        onOpenSearch={[Function]}
        onSearch={[Function]}
        query=""
        searchResults={null}
      >
        <SearchForm__Wrapper
          className=""
        >
          <div
            className="SearchForm__Wrapper-hq4lki-3 llMAec"
          >
            <SearchForm__Header>
              <div
                className="SearchForm__Header-hq4lki-4 gFcsdC"
              >
                <SearchForm__IconTag>
                  <_default
                    className="SearchForm__IconTag-hq4lki-0 eGhPaP"
                  >
                    <_default
                      className="SearchForm__IconTag-hq4lki-0 eGhPaP"
                    >
                      <div
                        className="SearchForm__IconTag-hq4lki-0 eGhPaP"
                      />
                    </_default>
                  </_default>
                </SearchForm__IconTag>
                Tag Wiki Pages
              </div>
            </SearchForm__Header>
            <SearchForm__AddTagButton
              accentColor="#00d6d6"
              disabled={null}
              onClick={[Function]}
            >
              <button
                className="SearchForm__AddTagButton-hq4lki-5 bcTQGW"
                disabled={null}
                onClick={[Function]}
              >
                Add Tag
                <SearchForm__IconAdd>
                  <_default
                    className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
                  >
                    <_default
                      className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
                    >
                      <div
                        className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
                      />
                    </_default>
                  </_default>
                </SearchForm__IconAdd>
              </button>
            </SearchForm__AddTagButton>
          </div>
        </SearchForm__Wrapper>
      </SearchForm>
      <AddedTags
        className=""
        onRemove={[Function]}
        tags={null}
      />
      <SuggestedTags
        className=""
        onClick={[Function]}
        tags={null}
      />
    </div>
  </StyledArticleTagsSelector__Wrapper>
</StyledArticleTagsSelector>
`;

exports[`ArticleTagsSelector renders with props 1`] = `
<StyledArticleTagsSelector
  accentColor="#00f"
  className="foo"
  communityName="bar"
  maxAllowed={10}
  maxNumOfTagsAdded={true}
  onAddTag={[Function]}
  onOpenSearch={[Function]}
  onRemoveTag={[Function]}
  onSearch={[Function]}
  onSuggestedTag={[Function]}
  query="q"
  searchResults={
    Array [
      Object {
        "articleId": "1",
        "articleTitle": "Foo",
      },
      Object {
        "articleId": "2",
        "articleTitle": "Bar",
      },
      Object {
        "articleId": "3",
        "articleTitle": "FooBar",
      },
    ]
  }
  suggestedTags={
    Array [
      Object {
        "articleId": "1",
        "articleTitle": "Foo",
      },
      Object {
        "articleId": "2",
        "articleTitle": "Bar",
      },
      Object {
        "articleId": "3",
        "articleTitle": "FooBar",
      },
    ]
  }
  tags={
    Array [
      Object {
        "articleId": "1",
        "articleTitle": "Foo",
      },
      Object {
        "articleId": "2",
        "articleTitle": "Bar",
      },
      Object {
        "articleId": "3",
        "articleTitle": "FooBar",
      },
    ]
  }
>
  <StyledArticleTagsSelector__Wrapper
    className="foo"
  >
    <div
      className="StyledArticleTagsSelector__Wrapper-sc-9gk8qd-0 lfkksC foo"
    >
      <SearchForm
        accentColor="#00f"
        className=""
        communityName="bar"
        maxAllowed={10}
        maxNumOfTagsAdded={false}
        onAddTag={[Function]}
        onOpenSearch={[Function]}
        onSearch={[Function]}
        query=""
        searchResults={
          Array [
            Object {
              "articleId": "1",
              "articleTitle": "Foo",
            },
            Object {
              "articleId": "2",
              "articleTitle": "Bar",
            },
            Object {
              "articleId": "3",
              "articleTitle": "FooBar",
            },
          ]
        }
      >
        <SearchForm__Wrapper
          className=""
        >
          <div
            className="SearchForm__Wrapper-hq4lki-3 llMAec"
          >
            <SearchForm__Header>
              <div
                className="SearchForm__Header-hq4lki-4 gFcsdC"
              >
                <SearchForm__IconTag>
                  <_default
                    className="SearchForm__IconTag-hq4lki-0 eGhPaP"
                  >
                    <_default
                      className="SearchForm__IconTag-hq4lki-0 eGhPaP"
                    >
                      <div
                        className="SearchForm__IconTag-hq4lki-0 eGhPaP"
                      />
                    </_default>
                  </_default>
                </SearchForm__IconTag>
                Tag Wiki Pages
              </div>
            </SearchForm__Header>
            <SearchForm__AddTagButton
              accentColor="#00f"
              disabled={false}
              onClick={[Function]}
            >
              <button
                className="SearchForm__AddTagButton-hq4lki-5 jElxGg"
                disabled={false}
                onClick={[Function]}
              >
                Add Tag
                <SearchForm__IconAdd>
                  <_default
                    className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
                  >
                    <_default
                      className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
                    >
                      <div
                        className="SearchForm__IconAdd-hq4lki-2 bmMlsQ"
                      />
                    </_default>
                  </_default>
                </SearchForm__IconAdd>
              </button>
            </SearchForm__AddTagButton>
          </div>
        </SearchForm__Wrapper>
      </SearchForm>
      <AddedTags
        className=""
        onRemove={[Function]}
        tags={
          Array [
            Object {
              "articleId": "1",
              "articleTitle": "Foo",
            },
            Object {
              "articleId": "2",
              "articleTitle": "Bar",
            },
            Object {
              "articleId": "3",
              "articleTitle": "FooBar",
            },
          ]
        }
      >
        <AddedTags__Wrapper
          className=""
        >
          <div
            className="AddedTags__Wrapper-if94vv-1 jnTuhh"
          >
            <AddedTags__Tag
              key="1"
              onRemove={[Function]}
              removable={true}
              tag="Foo"
            >
              <StyledTag
                className="AddedTags__Tag-if94vv-0 drIHtZ"
                onClick={null}
                onRemove={[Function]}
                removable={true}
                secondary={false}
                tag="Foo"
              >
                <StyledTag__Wrapper
                  className="AddedTags__Tag-if94vv-0 drIHtZ"
                  onClick={null}
                  secondary={false}
                >
                  <span
                    className="StyledTag__Wrapper-ja2wb4-0 icisQT AddedTags__Tag-if94vv-0 drIHtZ"
                    onClick={null}
                  >
                    Foo
                    <StyledTag__Icon
                      onClick={[Function]}
                    >
                      <_default
                        className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                        onClick={[Function]}
                      >
                        <_default
                          className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                          onClick={[Function]}
                        >
                          <div
                            className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                            onClick={[Function]}
                          />
                        </_default>
                      </_default>
                    </StyledTag__Icon>
                  </span>
                </StyledTag__Wrapper>
              </StyledTag>
            </AddedTags__Tag>
            <AddedTags__Tag
              key="2"
              onRemove={[Function]}
              removable={true}
              tag="Bar"
            >
              <StyledTag
                className="AddedTags__Tag-if94vv-0 drIHtZ"
                onClick={null}
                onRemove={[Function]}
                removable={true}
                secondary={false}
                tag="Bar"
              >
                <StyledTag__Wrapper
                  className="AddedTags__Tag-if94vv-0 drIHtZ"
                  onClick={null}
                  secondary={false}
                >
                  <span
                    className="StyledTag__Wrapper-ja2wb4-0 icisQT AddedTags__Tag-if94vv-0 drIHtZ"
                    onClick={null}
                  >
                    Bar
                    <StyledTag__Icon
                      onClick={[Function]}
                    >
                      <_default
                        className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                        onClick={[Function]}
                      >
                        <_default
                          className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                          onClick={[Function]}
                        >
                          <div
                            className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                            onClick={[Function]}
                          />
                        </_default>
                      </_default>
                    </StyledTag__Icon>
                  </span>
                </StyledTag__Wrapper>
              </StyledTag>
            </AddedTags__Tag>
            <AddedTags__Tag
              key="3"
              onRemove={[Function]}
              removable={true}
              tag="FooBar"
            >
              <StyledTag
                className="AddedTags__Tag-if94vv-0 drIHtZ"
                onClick={null}
                onRemove={[Function]}
                removable={true}
                secondary={false}
                tag="FooBar"
              >
                <StyledTag__Wrapper
                  className="AddedTags__Tag-if94vv-0 drIHtZ"
                  onClick={null}
                  secondary={false}
                >
                  <span
                    className="StyledTag__Wrapper-ja2wb4-0 icisQT AddedTags__Tag-if94vv-0 drIHtZ"
                    onClick={null}
                  >
                    FooBar
                    <StyledTag__Icon
                      onClick={[Function]}
                    >
                      <_default
                        className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                        onClick={[Function]}
                      >
                        <_default
                          className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                          onClick={[Function]}
                        >
                          <div
                            className="StyledTag__Icon-ja2wb4-1 lfRuQJ"
                            onClick={[Function]}
                          />
                        </_default>
                      </_default>
                    </StyledTag__Icon>
                  </span>
                </StyledTag__Wrapper>
              </StyledTag>
            </AddedTags__Tag>
          </div>
        </AddedTags__Wrapper>
      </AddedTags>
      <SuggestedTags
        className=""
        onClick={[Function]}
        tags={
          Array [
            Object {
              "articleId": "1",
              "articleTitle": "Foo",
            },
            Object {
              "articleId": "2",
              "articleTitle": "Bar",
            },
            Object {
              "articleId": "3",
              "articleTitle": "FooBar",
            },
          ]
        }
      >
        <SuggestedTags__Wrapper
          className=""
        >
          <div
            className="SuggestedTags__Wrapper-yazuu8-1 kDEEhr"
          >
            <SuggestedTags__SuggestedLabel>
              <div
                className="SuggestedTags__SuggestedLabel-yazuu8-2 iTNNRu"
              >
                Suggested
              </div>
            </SuggestedTags__SuggestedLabel>
            <SuggestedTags__Tag
              key="1"
              onClick={[Function]}
              secondary={true}
              tag="Foo"
            >
              <StyledTag
                className="SuggestedTags__Tag-yazuu8-0 bOGtrE"
                onClick={[Function]}
                onRemove={null}
                removable={false}
                secondary={true}
                tag="Foo"
              >
                <StyledTag__Wrapper
                  className="SuggestedTags__Tag-yazuu8-0 bOGtrE"
                  onClick={[Function]}
                  secondary={true}
                >
                  <span
                    className="StyledTag__Wrapper-ja2wb4-0 iWktsc SuggestedTags__Tag-yazuu8-0 bOGtrE"
                    onClick={[Function]}
                  >
                    Foo
                  </span>
                </StyledTag__Wrapper>
              </StyledTag>
            </SuggestedTags__Tag>
            <SuggestedTags__Tag
              key="2"
              onClick={[Function]}
              secondary={true}
              tag="Bar"
            >
              <StyledTag
                className="SuggestedTags__Tag-yazuu8-0 bOGtrE"
                onClick={[Function]}
                onRemove={null}
                removable={false}
                secondary={true}
                tag="Bar"
              >
                <StyledTag__Wrapper
                  className="SuggestedTags__Tag-yazuu8-0 bOGtrE"
                  onClick={[Function]}
                  secondary={true}
                >
                  <span
                    className="StyledTag__Wrapper-ja2wb4-0 iWktsc SuggestedTags__Tag-yazuu8-0 bOGtrE"
                    onClick={[Function]}
                  >
                    Bar
                  </span>
                </StyledTag__Wrapper>
              </StyledTag>
            </SuggestedTags__Tag>
            <SuggestedTags__Tag
              key="3"
              onClick={[Function]}
              secondary={true}
              tag="FooBar"
            >
              <StyledTag
                className="SuggestedTags__Tag-yazuu8-0 bOGtrE"
                onClick={[Function]}
                onRemove={null}
                removable={false}
                secondary={true}
                tag="FooBar"
              >
                <StyledTag__Wrapper
                  className="SuggestedTags__Tag-yazuu8-0 bOGtrE"
                  onClick={[Function]}
                  secondary={true}
                >
                  <span
                    className="StyledTag__Wrapper-ja2wb4-0 iWktsc SuggestedTags__Tag-yazuu8-0 bOGtrE"
                    onClick={[Function]}
                  >
                    FooBar
                  </span>
                </StyledTag__Wrapper>
              </StyledTag>
            </SuggestedTags__Tag>
          </div>
        </SuggestedTags__Wrapper>
      </SuggestedTags>
    </div>
  </StyledArticleTagsSelector__Wrapper>
</StyledArticleTagsSelector>
`;
